--- a/SEN381_Project_Call_Center_Group_8/SEN381_Project_Call_Center_Group_8.csproj
+++ b/SEN381_Project_Call_Center_Group_8/SEN381_Project_Call_Center_Group_8.csproj
@@ -52,21 +52,20 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="admin.cs" />
+    <Compile Include="BusinessLogic\admin.cs" />
     <Compile Include="AdministratorDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AdministratorDashboard.designer.cs">
       <DependentUpon>AdministratorDashboard.cs</DependentUpon>
     </Compile>
-    <Compile Include="adminstrator.cs" />
+    <Compile Include="BusinessLogic\adminstrator.cs" />
     <Compile Include="alert.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="alert.Designer.cs">
       <DependentUpon>alert.cs</DependentUpon>
     </Compile>
-    <Compile Include="BusinessLogic\abcClassTest.cs" />
     <Compile Include="PresentationLayer\userControls\callCenterDashboard_CALLS.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -91,18 +90,18 @@
     <Compile Include="callCenterDashoard.Designer.cs">
       <DependentUpon>callCenterDashoard.cs</DependentUpon>
     </Compile>
-    <Compile Include="BusinessClient.cs" />
-    <Compile Include="calls.cs" />
-    <Compile Include="commonMethods.cs" />
+    <Compile Include="BusinessLogic\BusinessClient.cs" />
+    <Compile Include="BusinessLogic\calls.cs" />
+    <Compile Include="BusinessLogic\commonMethods.cs" />
     <Compile Include="DBA\dbAcccess.cs" />
-    <Compile Include="individualClient.cs" />
+    <Compile Include="BusinessLogic\individualClient.cs" />
     <Compile Include="login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="login.Designer.cs">
       <DependentUpon>login.cs</DependentUpon>
     </Compile>
-    <Compile Include="loginPersonDetails.cs" />
+    <Compile Include="BusinessLogic\loginPersonDetails.cs" />
     <Compile Include="MessageBoxManager .cs" />
     <Compile Include="register.cs">
       <SubType>Form</SubType>
@@ -110,12 +109,12 @@
     <Compile Include="register.Designer.cs">
       <DependentUpon>register.cs</DependentUpon>
     </Compile>
-    <Compile Include="request.cs" />
-    <Compile Include="RoundButton.cs">
+    <Compile Include="BusinessLogic\request.cs" />
+    <Compile Include="PresentationLayer\userControls\RoundButton.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="serviceTier.cs" />
-    <Compile Include="ServiceType.cs" />
+    <Compile Include="BusinessLogic\serviceTier.cs" />
+    <Compile Include="BusinessLogic\ServiceType.cs" />
     <Compile Include="splash.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -124,7 +123,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Technician.cs" />
+    <Compile Include="BusinessLogic\Technician.cs" />
     <Compile Include="TechnicianDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
