--- a/SEN381_Project_Call_Center_Group_8/SEN381_Project_Call_Center_Group_8.csproj
+++ b/SEN381_Project_Call_Center_Group_8/SEN381_Project_Call_Center_Group_8.csproj
@@ -66,11 +66,24 @@
     <Compile Include="alert.Designer.cs">
       <DependentUpon>alert.cs</DependentUpon>
     </Compile>
+    <Compile Include="BusinessLogic\Validations.cs" />
     <Compile Include="clientDashboard.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="clientDashboard.Designer.cs">
       <DependentUpon>clientDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PresentationLayer\phone_call.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\phone_call.Designer.cs">
+      <DependentUpon>phone_call.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PresentationLayer\phone_dialer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\phone_dialer.Designer.cs">
+      <DependentUpon>phone_dialer.cs</DependentUpon>
     </Compile>
     <Compile Include="PresentationLayer\userControls\callCenterDashboard_CALLS.cs">
       <SubType>UserControl</SubType>
@@ -109,6 +122,12 @@
     </Compile>
     <Compile Include="BusinessLogic\loginPersonDetails.cs" />
     <Compile Include="MessageBoxManager .cs" />
+    <Compile Include="PresentationLayer\userControls\customTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="PresentationLayer\userControls\customTextBox.Designer.cs">
+      <DependentUpon>customTextBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="register.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -150,6 +169,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="clientDashboard.resx">
       <DependentUpon>clientDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\phone_call.resx">
+      <DependentUpon>phone_call.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PresentationLayer\phone_dialer.resx">
+      <DependentUpon>phone_dialer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PresentationLayer\userControls\callCenterDashboard_CALLS.resx">
       <DependentUpon>callCenterDashboard_CALLS.cs</DependentUpon>
