Implementing the call functionality on Client side. Tomorrow i will do ot on the callCenterEmployee's side.

--- a/SEN381_Project_Call_Center_Group_8/SEN381_Project_Call_Center_Group_8.csproj
+++ b/SEN381_Project_Call_Center_Group_8/SEN381_Project_Call_Center_Group_8.csproj
@@ -66,6 +66,8 @@
     <Compile Include="alert.Designer.cs">
       <DependentUpon>alert.cs</DependentUpon>
     </Compile>
+    <Compile Include="BusinessLogic\getDB_items.cs" />
+    <Compile Include="BusinessLogic\sendDB_items.cs" />
     <Compile Include="BusinessLogic\Validations.cs" />
     <Compile Include="clientDashboard.cs">
       <SubType>Form</SubType>
